syntax = "proto3";

package types;
option go_package = "../types";

message Game {
 
    string gameId = 1;
    // create 1 -> Match 2 -> Cancel 3 -> Close 4
    int32 status = 2;

    int64 createTime = 3;

    int64 matchTime = 4;
    int64 closetime = 5;
    int64 value = 6;

    string createAddress = 7;

    string matchAddress = 8;

    string hashType = 9;

    bytes hashValue = 10;

    string secret = 11;

    int32 result = 12;

    int32 matcherGuess = 13;
    // create txHash
    string createTxHash = 14;

    string matchTxHash = 15;
    // close txhash
    string closeTxHash = 16;
    // cancel txhash
    string cancelTxHash = 17;
    int64  index        = 18;
    int64  prevIndex    = 19;
    int32  creatorGuess = 20;
}

// message for execs.game
message GameAction {
    oneof value {
        GameCreate create = 1;
        GameCancel cancel = 2;
        GameClose  close  = 3;
        GameMatch  match  = 4;
    }
    int32 ty = 10;
}

message GameMatch {
    string gameId = 1;
    int32  guess  = 2;
}

message GameCancel {
    string gameId = 1;
}

message GameClose {
    string gameId = 1;
    string secret = 2;
}

message GameCreate {
    int64 value = 1;

    string hashType = 2;

    bytes hashValue = 3;
}


message QueryGameListByStatusAndAddr {

    int32 status = 1;
    string address = 2;

    int64 index = 3;
    int32 count = 4;
    int32 direction = 5;
}

message QueryGameListCount {
    int32 status = 1;
        string address = 2;
}

message GameRecord {
    string gameId = 1;
    int64  index  = 2;
}

message QueryGameInfo {
    string gameId = 1;
}

message QueryGameInfos {
    repeated string gameIds = 1;
}

message ReplyGameList {
    repeated Game games = 1;
}

message ReplyGameListCount {
    int64 count = 1;
}

message ReplyGame {
    Game game = 1;
}

message ReceiptGame {
    string gameId = 1;
    int32  status = 2;

    int32  prevStatus = 3;
    string addr       = 4;
    string createAddr = 5;
    string matchAddr  = 6;
    int64  index      = 7;
    int64  prevIndex  = 8;
}
