syntax = "proto3";

package signatory;

// Config toke cm 
message Config {
    repeated string whitelist    = 1;
    string          jrpcBindAddr = 2;
    string          privkey      = 3;
}
